Added most of the changes recommended by Boon
Instead of booked user ID retrieve name

User Book
Move booked from profile to book

Admin Users
Replace password with  User Type
Disable the delete button on admin
Or, Check user is admin before deleting

Admin Tabs
Move user/admin tabs to left to avoid logging out accidentl
Applied to all users

Encrypt the Passwords
Login page
user_landing password update form

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -50,6 +50,11 @@ li a {
     text-decoration: none;
 }
 
+/* this is not working */ 
+li#logout {
+  margin-left: 50px;
+}
+
 /* Body Style*/ 
 
 h1 {
@@ -232,5 +237,4 @@ form {
   clear: both;
   display: table;
 }
-
 
