--- a/views/user/user_book.ejs
+++ b/views/user/user_book.ejs
@@ -13,7 +13,7 @@
             <li><a href="/about">About</a></li>
             <li><a href="/services">Services</a></li>
             <li><a href="/contact">Contact</a></li>
-            <li style="float:right"><a href="/logout">Logout</a></li>
+            <li id="logout" style="float:right"><a href="/logout">Logout</a></li>
             <li style="float:right"><a class = "active" href="/user_book">Book</a></li>
             <li style="float:right"><a href="/user/user_landing">Profile</a></li>
 
@@ -21,9 +21,38 @@
         </ul>
     </div>
 
+    
     <div class="header"></div>
-
     <h1>Booking Page</h1>
+
+
+
+    <h2>Your Bookings</h2>
+    <table id="standard">
+        <tr>
+            <th>Booking Id</th>
+            <th>Date</th>
+            <th>Time</th>
+            <th>Cancel</th>
+        </tr>
+       <% userBookings.forEach(function(row) { %>
+            <tr>
+                <td><%= row.booking_id %></td>
+                <td><%= new Intl.DateTimeFormat('en-US', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' }).format(new Date(row.booking_date)) %></td>
+                <td><%= new Intl.DateTimeFormat('en-US', { hour: 'numeric', minute: 'numeric', hour12: true }).format(new Date('2023-01-01T' + row.booking_time)) %></td>
+                <td>
+                    <form action="/user/cancel-booking" method="post">
+                        <input type="hidden" name="booking_id" value="<%= row.booking_id %>">
+                        <button class="delete-button" data-booking-id="<%= row.booking_id %>">Cancel</button>
+                    </form>                
+                </td>
+            </tr>
+        <% }); %>
+    </table>
+
+
+    <h2>Available Bookings</h2>
+    
     <table id="standard">
         <tr>
             <th>Booking Id</th>
@@ -31,11 +60,11 @@
             <th>Time</th>
             <th>Book</th>
         </tr>
-        <% data.forEach(function(row) { %>
+        <% availableBookings.forEach(function(row) { %>
             <tr>
                 <td><%= row.booking_id %></td>
-                <td><%= row.booking_date %></td>
-                <td><%= row.booking_time %></td>
+                <td><%= new Intl.DateTimeFormat('en-US', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' }).format(new Date(row.booking_date)) %></td>
+                <td><%= new Intl.DateTimeFormat('en-US', { hour: 'numeric', minute: 'numeric', hour12: true }).format(new Date('2023-01-01T' + row.booking_time)) %></td>
                 <td>
                     <form action="/user/book_drone" method="post">
                         <input type="hidden" name="booking_id" value="<%= row.booking_id %>">
@@ -45,5 +74,7 @@
             </tr>
         <% }); %>
     </table>
+
+
 </body>
 </html>
