--- a/views/admin/admin_book.ejs
+++ b/views/admin/admin_book.ejs
@@ -13,9 +13,9 @@
             <li><a href="/about">About</a></li>
             <li><a href="/services">Services</a></li>
             <li><a href="/contact">Contact</a></li>
-            <li style="float:right"><a href="/logout">Logout</a></li>
-            <li style="float:right"><a class="active" href="/admin/admin_book">Admin Book</a></li>
+            <li id="logout" style="float:right"><a href="/logout">Logout</a></li>
             <li style="float:right"><a href="/admin/admin_landing">Admin Profile</a></li>
+            <li style="float:right"><a class="active" href="/admin/admin_book">Admin Book</a></li>
             <li style="float:right"><a href="/admin/admin_users">Admin Users</a></li>
         </ul>
     </div>
@@ -33,6 +33,8 @@
             <th>Booking Status</th>
             <th>Duration (Hours)</th>
             <th>Booked User Id</th>
+            <th>Booked User First Name </th>
+            <th>Booked User Last Name</th>
             <th>Delete</th>
         </tr>
     
@@ -44,7 +46,8 @@
                 <td><%= row.booking_status %></td>
                 <td><%= row.booking_duration %></td>
                 <td><%= row.booking_user_id %></td>
-                
+                <td><%= row.user_first_name %></td>
+                <td><%= row.user_last_name %></td>
                 <td>
                     <form action="/admin/delete-booking" method="post">
                         <input type="hidden" name="booking_id" value="<%= row.booking_id %>">
