--- a/views/admin/admin_users.ejs
+++ b/views/admin/admin_users.ejs
@@ -12,9 +12,9 @@
             <li><a href="/about">About</a></li>
             <li><a href="/services">Services</a></li>
             <li><a href="/contact">Contact</a></li>
-            <li style="float:right"><a href="/logout">Logout</a></li>
-            <li style="float:right"><a href="/admin/admin_book">Admin Book</a></li>
+            <li id="logout" style="float:right"><a href="/logout">Logout</a></li>
             <li style="float:right"><a href="/admin/admin_landing"> Admin Profile</a></li>
+            <li style="float:right"><a href="/admin/admin_book">Admin Book</a></li>
             <li style="float:right"><a class = "active" href="/admin/admin_users">Admin Users</a></li>
         </ul>
     </div>
@@ -29,7 +29,8 @@
             <th>First Name</th>
             <th>Last Name</th>
             <th>Email</th>
-            <th>Password</th>
+            <th>User Type</th>
+            <th>Edit</th>
             <th>Delete</th>
         </tr>
         
@@ -39,12 +40,18 @@
                 <td><%= row.user_first_name %></td>
                 <td><%= row.user_last_name %></td>
                 <td><%= row.user_email %></td>
-                <td><%= row.user_password %></td>
+                <td><%= row.user_type %></td>
+                <td>placeholder</td>
                 <td>
-                    <form action="/admin/delete-user" method="post">
-                        <input type="hidden" name="user_id" value="<%= row.user_id %>">
-                        <button class="delete-button" data-user-id="<%= row.user_id %>">Delete</button>
-                    </form>                
+                    <% if (row.user_type !== 'admin') { %>
+                        <form action="/admin/delete-user" method="post">
+                            <input type="hidden" name="user_id" value="<%= row.user_id %>">
+                            <button class="delete-button" data-user-id="<%= row.user_id %>">Delete</button>
+                        </form>
+                    <% } else { %>
+                       
+                        <span>Admin User</span>
+                    <% } %>
                 </td>
             </tr>
         <% }); %>
@@ -57,24 +64,26 @@
             <form action="/admin/edit-user" method="post">
                 <div class="container">
                     <label for="user_id"><b>User Id</b></label>
-                    <input type="number" placeholder="Select the User Id" name="user_id" required>
+                    <input type="number" placeholder="Select the User Id" name="user_id">
             
                     <label for="user_first_name"><b>First Name</b></label>
-                    <input type="text" placeholder="Edit the First Name" name="user_first_name" required>
+                    <input type="text" placeholder="Edit the First Name" name="user_first_name">
                     
                     <label for="user_last_name"><b>Last Name</b></label>
-                    <input type="text" placeholder="Edit the Last Name" name="user_last_name" required>
+                    <input type="text" placeholder="Edit the Last Name" name="user_last_name">
                     
                     <label for="user_email"><b>User Email</b></label>
-                    <input type="text" placeholder="Edit the Email Address" name="user_email" required>
+                    <input type="text" placeholder="Edit the Email Address" name="user_email">
 
                     <label for="user_type"><b>User Type</b></label>
-                    <select name="user_type" required>
-                        <option value="admin">Admin</option>
+                    <select name="user_type">
+                        <option value =""> No Change</option>
                         <option value="user">User</option>
+                        <option value="admin">Admin</option>
+                        
                         </select>
                     
-                        <button type="submit">Update Booking</button>
+                        <button type="submit">Update User</button>
                     </div>
                 </form> 
         </div>
