Adding text content.
Added some text to the main pages.

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -19,9 +19,22 @@
 
     <div class="header"></div>
     
-    <h1>About The Drone Guy</h1>
-    <h2>Learn About me</h2>
+    <h1>Meet The Drone Guy - Your Trusted Drone Consultant</h1>
+    <p1>
+        Meet The Drone Guy - Your Trusted Drone Consultant
 
+    Since 2015, I've been navigating the skies, not just as a skilled drone operator but also as a trained commercial pilot with a background in flight instruction. 
+    After my flight instruction training I fell head first into the budding drone industry.
+ 
+    My aviation experience as a trained commercial pilot and my grounding in flight instruction have instilled in me a comprehensive understanding of aviation principles. 
+    At The Drone Guy, safety takes precedence. I am unwaveringly committed to maintaining operations in strict accordance with Civil Aviation Authority Rules, ensuring every flight adheres to precise standards of compliance.
+  
+    This diverse aviation background uniquely positions me to blend the best practices of manned flight with the innovative capabilities of drone technology. 
+    Over the years, I've contributed my skills to various sectors, recognizing firsthand the pivotal role drones play in enhancing operational efficiency and safety across industries.
+     
+    At The Drone Guy, my mission is to harness this wealth of aviation knowledge and drone expertise to propel businesses towards efficiency, innovation, and, most importantly, safety. 
+    Let's collaborate and explore how drone technology can revolutionize your operations while upholding the highest standards of safety and compliance.
+    </p1>
 
-</body>
+    </body>
 </html>
