--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,10 +20,19 @@
     <div class="header"></div>
     
     <h1>The Drone Guy</h1>
-    <h2>Your Source for Drone Services</h2>
 
     <p>
-        Welcome to The Drone Guy. I'm Matt, your drone expert. Let's explore the world of drones together!
-    </p>
+        G'day! I'm Matt - The Drone Guy! Your Drone Partner!
+
+        As The Drone Guy, I bring eight years of rich experience in the dynamic world of drones. 
+    
+        I'm not just about flying high; I'm about taking your business to new heights. 
+        
+        With a track record spanning various industries like Forestry, Power, Surveying and Infrastructure Inspections, my expertise is rooted in practical knowledge and hands-on experience.
+
+        Whether you're seeking a few pointers to help streamline your operations, or you want an end-to-end solution. I've got you covered. 
+        
+        Explore my range of consulting services tailored to meet your business needs and soar to success with me.
+        </p>
 </body>
 </html>
