--- a/views/admin/admin_landing.ejs
+++ b/views/admin/admin_landing.ejs
@@ -22,34 +22,38 @@
         </ul>
     </div>
 
-    <div class="header"></div>
+    <div class="header">
     
-<!-- Admin Book Section -->
-<section id="adminBook">
-    <h2>Admin Book</h2>
-    <p>Welcome to the Admin Book page! Here, you can manage all bookings in the system.</p>
+    <h1>Admin Profile</h1>
 
-    <!-- Functions -->
-    <ul-1>
-        <li>View All Bookings - Easily navigate through a comprehensive list of all bookings in the system.</li>
-        <li>Edit Bookings - Make changes to a booking seamlessly to ensure accurate information.</li>
-        <li>Delete Bookings - Remove outdated or canceled reservations effortlessly.</li>
-        <li>Create Bookings - Initiate new bookings with ease.</li>
-    </ul>
-</section>
+    </div>
+        
+    <div class="content">
+        <div class="section">
+            <p>Welcome to the Admin pages! Here, you can manage all bookings in the system.</p>
+            <p>Here is what you can do on the Admin Book Page</p>
+            <ul-1>
+                <li>View All Bookings - Easily navigate through a comprehensive list of all bookings in the system.</li>
+                <li>Edit Bookings - Make changes to a booking seamlessly to ensure accurate information.</li>
+                <li>Delete Bookings - Remove outdated or canceled reservations effortlessly.</li>
+                <li>Create Bookings - Initiate new bookings with ease.</li>
+            </ul-1>
+        </div>
 
-<!-- Admin Users Section -->
-<section id="adminUsers">
-    <h2>Admin Users</h2>
-    <p>Welcome to the Admin Users page! This is your central hub for managing all user-related activities within the system.</p>
+    </div>
 
-    <ul-1>
-        <li>View All Users - Access a comprehensive list of all users in the system.</li>
-        <li>Edit Details - Update user information to ensure accuracy and relevance.</li>
-        <li>Delete Users - Manage user accounts effortlessly.</li>
-        <li>User Activity Tracking - Stay informed about user activities for better system security.</li>
-    </ul>
-</section>
+    <div class="content">
+        <div class="section">
+            <p>This is what you can do on the Admin Users page! 
+            <ul-1>
+                <li>View All Bookings - Easily navigate through a comprehensive list of all bookings in the system.</li>
+                <li>Edit Bookings - Make changes to a booking seamlessly to ensure accurate information.</li>
+                <li>Delete Bookings - Remove outdated or canceled reservations effortlessly.</li>
+                <li>Create Bookings - Initiate new bookings with ease.</li>
+            </ul-1>
+        </div>
+
+    </div>
 
 
 </body>
