--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -18,9 +18,11 @@
         </ul>
     </div>
 
-    <div class="header"></div>
+    <div class="header">
+        <h1>Contact</h1>
+    </div>
     
-    <h1>Contact</h1>
+   
     <h2>Contact us </h2>
 
     <p>
