--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,22 +17,48 @@
         </ul>
     </div>
 
-    <div class="header"></div>
-    
+    <div class="header">
+        
     <h1>The Drone Guy</h1>
 
-    <p>
-        G'day! I'm Matt - The Drone Guy! Your Drone Partner!
+    </div>
 
-        As The Drone Guy, I bring eight years of rich experience in the dynamic world of drones. 
+    <div class="intro">
+        <h2>G'day! I'm Matt - Your Drone Partner!</h2>
+    </div>
+
+    <div class="content">
+        <div class="section">
+            <img src='../images/shark.jpg' alt="Image 1">
+            <p>I bring eight years of rich experience in the dynamic world of drones.</p>
+        </div>
     
-        I'm not just about flying high; I'm about taking your business to new heights. 
-        
-        With a track record spanning various industries like Forestry, Power, Surveying and Infrastructure Inspections, my expertise is rooted in practical knowledge and hands-on experience.
+        <div class="section">
+            <img src='../images/bot_2.jpg' alt="Image 2">
+            <p>I'm not just about flying high; I'm about taking your business to new heights.</p>
+        </div>
 
-        Whether you're seeking a few pointers to help streamline your operations, or you want an end-to-end solution. I've got you covered. 
-        
-        Explore my range of consulting services tailored to meet your business needs and soar to success with me.
-        </p>
+    </div>
+
+
+    <div class="content">
+        <div class="section">
+        <img src='../images/M300.jpg' alt="Image 2">
+        <p>With a track record spanning various industries like Forestry, Power, Surveying and Infrastructure Inspections,
+            my expertise is rooted in practical knowledge and hands-on experience.</p>
+     </div>
+
+    <div class="section">
+        <img src='../images/Gaia_1.jpg' alt="Image 2">
+        <p>Whether you're seeking a few pointers to help streamline your operations, 
+            or you want an end-to-end solution. I've got you covered</p>
+    </div>
+    </div>     
+    
+    <div class="content">
+        <div class="section">
+        <p>Explore my range of consulting services tailored to meet your business needs and soar to success with me.</p>
+     </div> 
+    
 </body>
 </html>
