--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,9 +18,12 @@
         </ul>
     </div>
 
-    <div class="header"></div>
+    <div class="header">
+
+  <h1>Login Page </h1>
+    </div>
     
-    <h1>Login Page </h1>
+    
     
 
     <form action="/login" method="post">
