--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,9 +18,11 @@
         </ul>
     </div>
 
-    <div class="header"></div>
+    <div class="header">
     
     <h1>Register Page </h1>
+
+  </div>
      
     <form action="/register" method="post">
         <div class="imgcontainer">
