--- a/views/services.ejs
+++ b/views/services.ejs
@@ -17,9 +17,11 @@
         </ul>
     </div>
 
-    <div class="header"></div>
+    <div class="header">
+        <h1>Services </h1>
+    </div>
     
-    <h1>The Drone Guy's Services </h1>
+    
     <h2>Learn About Our Services</h2>
 
     <p>
