--- a/views/user/user_book.ejs
+++ b/views/user/user_book.ejs
@@ -22,8 +22,10 @@
     </div>
 
     
-    <div class="header"></div>
-    <h1>Booking Page</h1>
+    <div class="header">
+        <h1>Booking Page</h1>
+    </div>
+   
 
 
 
