--- a/views/user/user_landing.ejs
+++ b/views/user/user_landing.ejs
@@ -20,9 +20,11 @@
         </ul>
     </div>
 
-    <div class="header"></div>
+    <div class="header">
+        <h1>User Landing Page</h1>
+    </div>
 
-    <h1>User Landing Page</h1>
+    
 
     
     <h2>Your Details</h2>
