--- a/views/admin/admin_book.ejs
+++ b/views/admin/admin_book.ejs
@@ -20,9 +20,12 @@
         </ul>
     </div>
 
-    <div class="header"></div>
+    <div class="header">
+        <h1>Admin Booking Management Page</h1>
 
-    <h1>Admin Booking Management Page</h1>
+    </div>
+
+    
 
     <h2>All Bookings</h2>
     <table id="standard">
